<resources>
    <string name="app_name">Calc</string>
    <string name="acercade">Acerca de...</string>
    <string name="salir">Salir..</string>
    <string name="title_activity_acercade">Acercade</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="irACalculadora">Ir a Calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="c">C</string>
    <string name="parentesisAbierto">(</string>
    <string name="parentesisCerrado">)</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">X</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="menos">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mas">+</string>
    <string name="borrar"><![CDATA[<-]]></string>
    <string name="_0">0</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="_0res">0</string>
    <string name="iracalculadoracientifica">Ir a Calculadora Cientifica</string>
    <string name="sen">sen()</string>
    <string name="cos">cos()</string>
    <string name="tan">tan()</string>
    <string name="x_2">x^2</string>
    <string name="potencia">^</string>
    <string name="raizCuadrada">√</string>
</resources>