<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".Cientifica">

    <Button
        android:id="@+id/button5"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:backgroundTint="#292929"
        android:text="@string/potencia"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/x_2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button37" />

    <Button
        android:id="@+id/button3"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/tan"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button36" />

    <Button
        android:id="@+id/button2"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/cos"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button34"
        app:layout_constraintTop_toBottomOf="@+id/button35" />

    <Button
        android:id="@+id/button"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/borrar"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button35"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button30" />

    <Button
        android:id="@+id/button37"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#689F38"
        android:text="@string/igual"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button36"
        app:layout_constraintTop_toBottomOf="@+id/button33" />

    <Button
        android:id="@+id/button36"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/punto"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button37"
        app:layout_constraintStart_toEndOf="@+id/button35"
        app:layout_constraintTop_toBottomOf="@+id/button32" />

    <Button
        android:id="@+id/button35"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button36"
        app:layout_constraintStart_toEndOf="@+id/button34"
        app:layout_constraintTop_toBottomOf="@+id/button31" />

    <Button
        android:id="@+id/button34"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/sen"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button33"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/mas"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button32"
        app:layout_constraintTop_toBottomOf="@+id/button28" />

    <Button
        android:id="@+id/button32"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_3"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button33"
        app:layout_constraintStart_toEndOf="@+id/button31"
        app:layout_constraintTop_toBottomOf="@+id/button27" />

    <Button
        android:id="@+id/button31"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_2"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button32"
        app:layout_constraintStart_toEndOf="@+id/button30"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

    <Button
        android:id="@+id/button30"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button31"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button28"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/menos"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button27"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button27"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_6"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button28"
        app:layout_constraintStart_toEndOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button20" />

    <Button
        android:id="@+id/button24"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_5"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button27"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button23"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_7"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button22"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#292929"
        android:text="@string/divide"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button20"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_9"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button19"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_8"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button18"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/_4"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button15"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#292929"
        android:text="@string/x"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.609"
        app:layout_constraintStart_toEndOf="@+id/button20"
        app:layout_constraintTop_toBottomOf="@+id/button22" />

    <Button
        android:id="@+id/button14"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#292929"
        android:text="@string/parentesisCerrado"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toStartOf="@+id/button22"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button13"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#292929"
        android:text="@string/parentesisAbierto"
        android:textColor="#4CAF50"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="368dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0res"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button11"
        android:layout_width="76dp"
        android:layout_height="48dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#292929"
        android:text="@string/c"
        android:textColor="#FF5722"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>